@@ -486,3 +486,8 @@ ACCESS_LEVEL_HIDE_OF 20
 ACCESS_LEVEL_HIDE_TO 2
 
 # , all user names are shown at all times.
+
+# Players that authenticate/de-authenticate with this access level can have
+# their their login/logout message announced.
+
+ACCESS_LEVEL_ANNOUNCE_LOGIN 20
